testsuite/tests/rename/should_fail/T1595a.hs
module T1595a where

a, b :: Integer -> Tpyo
a = undefined
b = undefined
